--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <div class="overlayNavigation overlayAnimation">
                 <a class="overlayNavigation-item">Home</a>
                 <a class="overlayNavigation-item">Anwendungen</a>
+                <a class="overlayNavigation-item">Über</a>
                 <a class="overlayNavigation-item">Netzwerk</a>
                 <a class="overlayNavigation-item">Kontakt</a>
             </div>
@@ -81,8 +82,9 @@
                         </div>
                     </div>
                     <div id="navigationBar_menu">
+                        <div id="navigationBar_menuItem">Home</div>
                         <div id="navigationBar_menuItem">Anwendungen</div>
-                        <div id="navigationBar_menuItem">Über mich</div>
+                        <div id="navigationBar_menuItem">Über</div>
                         <div id="navigationBar_menuItem">Netzwerk</div>
                         <div id="navigationBar_menuItem">Kontakt</div>
                     </div>
@@ -337,51 +339,84 @@
             <div id="contact">
                 <div class="contactHeadline">
                 </div>
-                <div class="contactRightBG"></div>
                 <div class="contactRight">
                     <h5>Kontakt</h5>
-
-                    <div class="contactRight-cardWrapper">
-                        <div class="contactRight-cardHeadline">
-                            <h3>Telefon</h3>
-                        </div>
-                        <div class="contactRight-card">
-                            <div class="contactRight-cardIcon">
-                                <i class="fa-solid fa-phone-volume" aria-hidden="true"></i>
+                    <div class="contactRight-cards">
+                        <div class="contactRight-cardWrapper">
+                            <div class="contactRight-cardHeadline">
+                                <h3>&nbsp;</h3>
                             </div>
-                            <div class="contactRight-cardContent">
-                                <p>023182348 581858</p>
+                            <div class="contactRight-card">
+                                <div class="contactRight-cardIcon">
+                                    <i class="fa-solid fa-phone-volume" aria-hidden="true"></i>
+                                </div>
+                                <div class="contactRight-cardContent">
+                                    <p>Frederik Weber<br>
+                                        Physiotherapeut</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="contactRight-cardWrapper">
+                            <div class="contactRight-cardHeadline">
+                                <h3>Telefon &amp; WhatsApp</h3>
+                            </div>
+                            <div class="contactRight-card">
+                                <div class="contactRight-cardIcon">
+                                    <i class="fa-solid fa-phone-volume" aria-hidden="true"></i>
+                                </div>
+                                <div class="contactRight-cardContent">
+                                    <p>023182348 581858</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="contactRight-cardWrapper">
+                            <div class="contactRight-cardHeadline">
+                                <h3>Telefon</h3>
+                            </div>
+                            <div class="contactRight-card">
+                                <div class="contactRight-cardIcon">
+                                    <i class="fa-solid fa-phone-volume" aria-hidden="true"></i>
+                                </div>
+                                <div class="contactRight-cardContent">
+                                    <p>023182348 581858</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="contactRight-cardWrapper">
+                            <div class="contactRight-cardHeadline">
+                                <h3>Telefon</h3>
+                            </div>
+                            <div class="contactRight-card">
+                                <div class="contactRight-cardIcon">
+                                    <i class="fa-solid fa-phone-volume" aria-hidden="true"></i>
+                                </div>
+                                <div class="contactRight-cardContent">
+                                    <p>Frederik Weber<br>
+                                        Physiotherapeut</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="contactRight-cardWrapper">
+                            <div class="contactRight-cardHeadline">
+                                <h3>Telefon</h3>
+                            </div>
+                            <div class="contactRight-card">
+                                <div class="contactRight-cardIcon">
+                                    <i class="fa-solid fa-phone-volume" aria-hidden="true"></i>
+                                </div>
+                                <div class="contactRight-cardContent">
+                                    <p>Frederik Weber<br>
+                                        Physiotherapeut</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="contactRight-cardWrapper">
-                        <div class="contactRight-cardHeadline">
-                            <h3>Telefon</h3>
-                        </div>
-                        <div class="contactRight-card">
-                            <div class="contactRight-cardIcon">
-                                <i class="fa-solid fa-phone-volume" aria-hidden="true"></i>
-                            </div>
-                            <div class="contactRight-cardContent">
-                                <p>023182348 581858</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="contactRight-cardWrapper">
-                        <div class="contactRight-cardHeadline">
-                            <h3>Telefon</h3>
-                        </div>
-                        <div class="contactRight-card">
-                            <div class="contactRight-cardIcon">
-                                <i class="fa-solid fa-phone-volume" aria-hidden="true"></i>
-                            </div>
-                            <div class="contactRight-cardContent">
-                                <p>023182348 581858</p>
-                            </div>
-                        </div>
-                    </div>
 
-
+                    <div class="contactRight-social">
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-square-facebook"></i>
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </div>
                 </div>
             </div>
         </section>
@@ -389,38 +424,37 @@
             <div class="footerAbsoluteBG"></div>
             <div class="footer_inner">
                 <div class="footerBox">
-                    <div class="footerHeadline">Kontakt</div>
+                    <div class="footerHeadline">Impressum</div>
+                    <!--<div class="footerHeadline">Kontakt</div>
                     <div class="footerText">Inhaber B.Sc. Frederik Weber</div>
                     <div class="footerText">Heilpraktiker für Physiotherapie</div>
                     <div class="footerText">Crayenbühlstraße 1a</div>
                     <div class="footerText">67295 Bolanden-Weierhof</div>
+                    -->
 
                 </div>
                 <div class="footerBox">
-                    <div class="footerHeadline">Telefon</div>
+                    <div class="footerHeadline">Impressum</div>
+                    <!--<div class="footerHeadline">Telefon</div>
                     <div class="footerText"><i class="fa-solid fa-phone-volume"></i>06352 7190327</div>
                     <div class="footerText"><i class="fa-solid fa-mobile-screen"></i>01575 4365617</div>
+                    -->
                 </div>
                 <div class="footerBox">
-                    <div class="footerHeadlineSocial">Social Media</div>
+                    <div class="footerHeadline">Impressum</div>
+                    <!--<div class="footerHeadlineSocial">Social Media</div>
                     <div class="footerSocialTabs">
                         <i class="fa-brands fa-instagram"></i>
                         <i class="fa-brands fa-square-facebook"></i>
                         <i class="fa-brands fa-whatsapp"></i>
                     </div>
+                    -->
                 </div>
-                <div class="footerBox">
-                    <div class="footerLogo">
-                        <!--
-                        <div class="footerLogo-logobox"><img src="src/logo.png" height="100%"></div>
-                        <div class="footerLogo-textbox">
-                            <div class="footerLogo-textbox-1">Physiotherapie</div>
-                            <div class="footerLogo-textbox-2">Praxis Weber</div>
-                        </div>
-                        -->
+                <!--<div class="footerBox">
+                        <div class="footerLogo">
                         <img src="src/LogoReworked.png" height="100%">
                     </div>
-                </div>
+                </div>-->
             </div>
 
         </section>
