--- a/index.html
+++ b/index.html
@@ -232,7 +232,16 @@
                         <div class="newLeistungen-card opacityReveal">
                             <img src="src/frederikEditLowQ.jpg">
                             <div class="newLeistungen-cardText">
-                                <div class="newLeistungen-cardTextHeadline">Effektives <br>Coaching</div>
+                                <div class="newLeistungen-cardTextHeadline">
+
+                                    <div class="iconi">
+
+                                    </div>
+                                    <h3><i>Effektives<br>
+                                            Coaching</i></h3>
+                                </div>
+                                <p>im Bereich Schmerzpsychologie und Wahrnehmung</p>
+
                             </div>
                         </div>
                     </div>
