--- a/index.html
+++ b/index.html
@@ -147,26 +147,26 @@
                 <h5>Physiotherapie in Bolanden</h5>
                 <p>Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</p>
                 <div class="physioHelpsCards">
-                    <div class="physioHelpsCard cardOne moveRight">
+                    <div class="physioHelpsCard moveRight fromBottomWrapper">
                         <div class="physioHelpsCardIcon">
                             <img src="src/pain.svg" height="100%">
-                            <div class="physioHelpsCardIconBG"></div>
+                            <div class="physioHelpsCardIconBG goActive"></div>
                         </div>
                         <div class="physioHelpsCardHeadline">Schmerzlinderung</div>
                         <p>Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</p>
                     </div>
-                    <div class="physioHelpsCard moveRight">
+                    <div class="physioHelpsCard moveRight fromBottomWrapper">
                         <div class="physioHelpsCardIcon">
                             <img src="src/running.png" height="100%">
-                            <div class="physioHelpsCardIconBG"></div>
+                            <div class="physioHelpsCardIconBG goActive"></div>
                         </div>
                         <div class="physioHelpsCardHeadline">Verbesserung der Mobilität</div>
                         <p>Nach Verletzungen oder Operationen hilft Physiotherapie Patienten, ihre Beweglichkeit und Flexibilität wiederzuerlangen.</p>
                     </div>
-                    <div class="physioHelpsCard cardThree moveRight">
+                    <div class="physioHelpsCard moveRight fromBottomWrapper">
                         <div class="physioHelpsCardIcon">
                             <img src="src/run.svg" height="100%">
-                            <div class="physioHelpsCardIconBG"></div>
+                            <div class="physioHelpsCardIconBG goActive"></div>
                         </div>
                         <div class="physioHelpsCardHeadline">Rehabilitation nach Verletzungen </div>
                         <p>Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</p>
@@ -306,6 +306,8 @@
 
         </div>
 
+
+
         <section id="thirdSection">
             <div class="thirdSection_inner">
                 <h4>Die Praxis</h4>
@@ -343,6 +345,8 @@
                 </div>
             </div>
         </section>
+
+
 
         <section id="contactWrapper">
             <div id="contact">
@@ -429,6 +433,51 @@
                 </div>
             </div>
         </section>
+
+
+
+
+        <div id="physioHelpsWrapper" class="opacityReveal">
+            <div class="sectionImagePadding">
+                <div class="sectionImage"></div>
+            </div>
+            <div class="physioHelps sectionWrapper">
+                <h5>Unsere Partner</h5>
+                <p>Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</p>
+                <div class="physioHelpsCards">
+                    <div class="physioHelpsCard cardOne moveRight">
+                        <div class="physioHelpsCardIcon">
+                            <img src="src/pain.svg" height="100%">
+                            <div class="physioHelpsCardIconBG"></div>
+                        </div>
+                        <div class="physioHelpsCardHeadline">Schmerzlinderung</div>
+                        <p>Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</p>
+                    </div>
+                    <div class="physioHelpsCard moveRight">
+                        <div class="physioHelpsCardIcon">
+                            <img src="src/running.png" height="100%">
+                            <div class="physioHelpsCardIconBG goActive"></div>
+                        </div>
+                        <div class="physioHelpsCardHeadline">Verbesserung der Mobilität</div>
+                        <p>Nach Verletzungen oder Operationen hilft Physiotherapie Patienten, ihre Beweglichkeit und Flexibilität wiederzuerlangen.</p>
+                    </div>
+                    <div class="physioHelpsCard cardThree moveRight">
+                        <div class="physioHelpsCardIcon">
+                            <img src="src/run.svg" height="100%">
+                            <div class="physioHelpsCardIconBG"></div>
+                        </div>
+                        <div class="physioHelpsCardHeadline">Rehabilitation nach Verletzungen </div>
+                        <p>Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
         <section id="footer">
             <div class="footerAbsoluteBG"></div>
             <div class="footer_inner">
