--- a/index.html
+++ b/index.html
@@ -103,9 +103,11 @@
                 </div>
                 <div id="header-right">
                     <div id="header_headlineWrapper">
-                        <h1>Frederik Weber</h1>
-                        <div class="subTitle">
-                            <p>Physiotherapeut</p>
+                        <div class="titleSubtitle">
+                            <h1>Frederik Weber</h1>
+                            <div class="subTitle">
+                                <p>Physiotherapeut</p>
+                            </div>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
                         <button class="moreButton">
