--- a/index.html
+++ b/index.html
@@ -97,13 +97,18 @@
             </div>
             <div id="header_inner">
                 <div id="header-left">
-                    <img src="src/frederikEditLowQ.jpg">
+                    <div class="imgBox">
+                        <div class="darkCircle"></div>
+                        <div class="brightCircle"></div>
+                        <img src="src/frederikEditLowQ.jpg">
+                    </div>
+
                     <div class="header-leftBG"></div>
                     <div class="header-leftBG2"></div>
                 </div>
                 <div id="header-right">
                     <div id="header_headlineWrapper">
-                        <div class="titleSubtitle">
+                        <div class="titleSubtitle moveRight">
                             <h1>Frederik Weber</h1>
                             <div class="subTitle">
                                 <p>Physiotherapeut</p>
