--- a/index.html
+++ b/index.html
@@ -185,8 +185,10 @@
             <div class="newLeistungen sectionWrapper">
                 <div class="newLeistungenLeft">
                     <div class="newLeistungenLeftInner">
-                        <h2>Unsere</h2>
-                        <h5>Anwendungen</h5>
+                        <div class="titleSubtitle">
+                            <h2>Unsere</h2>
+                            <h5>Anwendungen</h5>
+                        </div>
                         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
                             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
                         <button class="justAButton">mehr erfahren</button>
@@ -391,7 +393,7 @@
                         </div>
                         <div class="contactRight-cardWrapper">
                             <div class="contactRight-cardHeadline">
-                                <h3>Telefon</h3>
+                                <h3>Social</h3>
                             </div>
                             <div class="contactRight-card">
                                 <div class="contactRight-cardIcon">
@@ -489,7 +491,7 @@
             <div class="footerAbsoluteBG"></div>
             <div class="footer_inner">
                 <div class="footerBox">
-                    <div class="footerHeadline">Impressum</div>
+                    <div class="footerHeadline">Datenschutz</div>
                     <!--<div class="footerHeadline">Kontakt</div>
                     <div class="footerText">Inhaber B.Sc. Frederik Weber</div>
                     <div class="footerText">Heilpraktiker für Physiotherapie</div>
@@ -499,7 +501,7 @@
 
                 </div>
                 <div class="footerBox">
-                    <div class="footerHeadline">Impressum</div>
+                    <div class="footerHeadline">Frederik Weber</div>
                     <!--<div class="footerHeadline">Telefon</div>
                     <div class="footerText"><i class="fa-solid fa-phone-volume"></i>06352 7190327</div>
                     <div class="footerText"><i class="fa-solid fa-mobile-screen"></i>01575 4365617</div>
