--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                     <div class="header-leftBG"></div>
                     <div class="header-leftBG2"></div>
                 </div>
-                <div id="header-right">
+                <div id="header-right" class="sectionWrapper">
                     <div id="header_headlineWrapper">
-                        <div class="titleSubtitle moveRight">
+                        <div class="titleSubtitle">
                             <h1>Frederik Weber</h1>
                             <div class="subTitle">
                                 <p>Physiotherapeut</p>
@@ -257,7 +257,6 @@
                 </div>
             </div>
         </section>
-
         <section id="firstSection">
             <div class="firstSection-overlay"></div>
             <div class="firstSection_inner">
@@ -270,7 +269,7 @@
                 </div>
             </div>
         </section>
-        <div class="yPhysioWrapper opacityReveal">
+        <div class="yPhysioWrapper sectionWrapper opacityReveal">
             <div class="yPhysioHeader">Wieso Physiotherapie?</div>
             <div class="text">Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</div>
             <div class="yPhysioInner">
@@ -315,53 +314,11 @@
 
         </div>
 
-
-
-        <section id="thirdSection">
-            <div class="thirdSection_inner">
-                <h4>Die Praxis</h4>
-                <div class="thirdSection_grid">
-                    <div class="grid-item1">1</div>
-                    <div class="grid-item2">
-                        <div class="gridtext">
-                            Physiotherapie <br>Weber
-                        </div>
-                    </div>
-                    <div class="grid-item3">3</div>
-                    <div class="grid-item4">4</div>
-                </div>
-            </div>
-        </section>
-        <section id="fourthSection">
-            <div class="fourthSection_inner">
-                <h5>Unsere Leistungen</h5>
-                <div class="fourthSection_itemWrapper">
-                    <div class="fourthSection_item">
-                        <i class="fa-solid fa-staff-snake"></i>
-                        <h4>Vielseitige Therapieverfahren</h4>
-                        <div class="text">Kombination aus Physiotherapie, manueller Therapie, Lymphdrainage und neurologischen Konzepten (bereits ab dem Baby-/Kleinkindalter)</div>
-                    </div>
-                    <div class="fourthSection_item">
-                        <i class="fa-solid fa-handshake-angle"></i>
-                        <h4>Effektives Coaching</h4>
-                        <div class="text">im Bereich Schmerzpsychologie und Wahrnehmung</div>
-                    </div>
-                    <div class="fourthSection_item">
-                        <i class="fa-solid fa-dumbbell"></i>
-                        <h4>Professionnelle Fitnessberatung</h4>
-                        <div class="text">Erstellung von Fitnessplänen, gemeinsames Training, Personal Training</div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-
-
         <section id="contactWrapper">
             <div id="contact">
                 <div class="contactHeadline">
                 </div>
-                <div class="contactRight">
+                <div class="contactRight sectionWrapper">
                     <h5>Kontakt</h5>
                     <div class="contactRight-cards">
                         <div class="contactRight-cardWrapper">
@@ -443,9 +400,6 @@
             </div>
         </section>
 
-
-
-
         <div id="physioHelpsWrapper" class="opacityReveal">
             <div class="sectionImagePadding">
                 <div class="sectionImage"></div>
@@ -453,7 +407,7 @@
             <div class="physioHelps sectionWrapper">
                 <h5>Unsere Partner</h5>
                 <p>Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</p>
-                <div class="physioHelpsCards">
+                <div class=" physioHelpsCards">
                     <div class="physioHelpsCard cardOne moveRight">
                         <div class="physioHelpsCardIcon">
                             <img src="src/pain.svg" height="100%">
