--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             <div id="contact">
                 <div class="contactHeadline">
                 </div>
-                <div class="contactRight sectionWrapper">
+                <div class="contactRight">
                     <h5>Kontakt</h5>
                     <div class="contactRight-cards">
                         <div class="contactRight-cardWrapper">
