--- a/index.html
+++ b/index.html
@@ -404,34 +404,12 @@
             <div class="sectionImagePadding">
                 <div class="sectionImage"></div>
             </div>
-            <div class="physioHelps sectionWrapper">
+            <div class="sectionWrapper">
                 <h5>Unsere Partner</h5>
                 <p>Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</p>
-                <div class=" physioHelpsCards">
-                    <div class="physioHelpsCard cardOne moveRight">
-                        <div class="physioHelpsCardIcon">
-                            <img src="src/pain.svg" height="100%">
-                            <div class="physioHelpsCardIconBG"></div>
-                        </div>
-                        <div class="physioHelpsCardHeadline">Schmerzlinderung</div>
-                        <p>Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</p>
-                    </div>
-                    <div class="physioHelpsCard moveRight">
-                        <div class="physioHelpsCardIcon">
-                            <img src="src/running.png" height="100%">
-                            <div class="physioHelpsCardIconBG goActive"></div>
-                        </div>
-                        <div class="physioHelpsCardHeadline">Verbesserung der Mobilität</div>
-                        <p>Nach Verletzungen oder Operationen hilft Physiotherapie Patienten, ihre Beweglichkeit und Flexibilität wiederzuerlangen.</p>
-                    </div>
-                    <div class="physioHelpsCard cardThree moveRight">
-                        <div class="physioHelpsCardIcon">
-                            <img src="src/run.svg" height="100%">
-                            <div class="physioHelpsCardIconBG"></div>
-                        </div>
-                        <div class="physioHelpsCardHeadline">Rehabilitation nach Verletzungen </div>
-                        <p>Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</p>
-                    </div>
+                <div class="flexBox">
+                    <img src="src/HHG.png" height="150px">
+                    <img src="src/teamKL.jpg" height="150px">
                 </div>
             </div>
         </div>
