--- a/index.html
+++ b/index.html
@@ -119,6 +119,23 @@
                 </div>
             </div>
             <div id="header_inner">
+                <div class="testCircleWrapper">
+                    <div class="testCircle">
+
+                        <div class="testImgBox">
+                            <img src="src/frederikEditLowQ.jpg">
+                        </div>
+
+                    </div>
+
+
+
+                </div>
+
+
+
+
+
                 <div id="header-left">
                     <div class="imgBox">
                         <div class="darkCircle"></div>
@@ -132,10 +149,10 @@
                 <div id="header-right" class="sectionWrapper">
                     <div id="header_headlineWrapper">
                         <div class="titleSubtitle">
-                            <h1>Frederik Weber</h1>
                             <div class="subTitle">
                                 <p>Physiotherapeut</p>
                             </div>
+                            <h1>Frederik Weber</h1>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
                         <button class="moreButton">
