--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <div class="newLeistungenRight">
                     <div class="leistungenRightGrid">
                         <div class="newLeistungen-card opacityReveal">
-                            <img src="src/IMG_3945.JPG">
+                            <img src="src/behandlung.png">
                             <div class="newLeistungen-cardText">
                                 <div class="newLeistungen-cardTextHeadline">
                                     <div class="iconi">
