--- a/index.html
+++ b/index.html
@@ -43,27 +43,30 @@
 
 <body>
 
-    <!-- <div class="loader-wrapper">
+    <div class="loader-wrapper">
 
-        <div class="blueDots">
-            <div class="blueDot1"></div>
-            <div class="blueDot2"></div>
-            <div class="blueDot3"></div>
-            <div class="blueDot4"></div>
-            <div class="blueDot5"></div>
-            <div class="blueDot6"></div>
-            <div class="blueDot7"></div>
-            <div class="blueDot8"></div>
-            <div class="blueDot9"></div>
-            <div class="blueDot10"></div>
+
+        <div class="loadImageWrapper">
+            <div class="blueDots">
+                <div class="blueDot1"></div>
+                <div class="blueDot2"></div>
+                <div class="blueDot3"></div>
+                <div class="blueDot4"></div>
+                <div class="blueDot5"></div>
+                <div class="blueDot6"></div>
+                <div class="blueDot7"></div>
+                <div class="blueDot8"></div>
+                <div class="blueDot9"></div>
+                <div class="blueDot10"></div>
+            </div>
+
+            <img class="loadImage" src="src/logo.png" height="200px">
         </div>
-
-        <img class="loadImage" src="src/logo.png" height="200px">
         <div class="line-wobble"></div>
 
 
 
-    </div> -->
+    </div>
 
     <div class="overlay">
         <div class="overlayInner">
@@ -499,9 +502,7 @@
         </section>
     </div>
     <div class="backToTop"><i class="fa-solid fa-angle-up"></i></div>
-    <script src="script.js"></script>
 
-    <!--
     <script>
         function changeDots() {
             for (let i = 0; i < document.querySelector(".blueDots").children.length; i++) {
@@ -521,7 +522,10 @@
         changeDots();
 
     </script>
-    -->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <script src="script.js"></script>
+
 
 </body>
 
