--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <h5>Physiotherapie in Bolanden</h5>
                 <p>Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</p>
                 <div class="physioHelpsCards">
-                    <div class="physioHelpsCard moveRight fromBottomWrapper">
+                    <div class="physioHelpsCard opacityReveal fromBottomWrapper">
                         <div class="physioHelpsCardIcon">
                             <img src="src/pain.svg" height="100%">
                             <div class="physioHelpsCardIconBG goActive"></div>
@@ -205,7 +205,7 @@
                         <div class="physioHelpsCardHeadline">Schmerzlinderung</div>
                         <p>Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</p>
                     </div>
-                    <div class="physioHelpsCard moveRight fromBottomWrapper">
+                    <div class="physioHelpsCard opacityReveal fromBottomWrapper">
                         <div class="physioHelpsCardIcon">
                             <img src="src/running.png" height="100%">
                             <div class="physioHelpsCardIconBG goActive"></div>
@@ -213,7 +213,7 @@
                         <div class="physioHelpsCardHeadline">Verbesserung der Mobilität</div>
                         <p>Nach Verletzungen oder Operationen hilft Physiotherapie Patienten, ihre Beweglichkeit und Flexibilität wiederzuerlangen.</p>
                     </div>
-                    <div class="physioHelpsCard moveRight fromBottomWrapper">
+                    <div class="physioHelpsCard opacityReveal fromBottomWrapper">
                         <div class="physioHelpsCardIcon">
                             <img src="src/run.svg" height="100%">
                             <div class="physioHelpsCardIconBG goActive"></div>
@@ -238,9 +238,9 @@
                     </div>
                 </div>
                 <div class="newLeistungenRight">
-                    <div class="leistungenRightGrid">
-                        <div class="newLeistungen-card opacityReveal">
-                            <img src="src/behandlung.png">
+                    <div class="leistungenRightGrid fromBottomWrapper">
+                        <div class="newLeistungen-card">
+                            <img src="src/behandlung.jpg">
                             <div class="newLeistungen-cardText">
                                 <div class="newLeistungen-cardTextHeadline">
                                     <div class="iconi">
@@ -252,7 +252,7 @@
                                 <p>Kombination aus Physiotherapie, manueller Therapie, Lymphdrainage und neurologischen Konzepten (bereits ab dem Baby-/Kleinkindalter)</p>
                             </div>
                         </div>
-                        <div class=" newLeistungen-card opacityReveal">
+                        <div class=" newLeistungen-card">
                             <img src="src/training2.jpg">
                             <div class="newLeistungen-cardText">
                                 <div class="newLeistungen-cardTextHeadline">
@@ -268,7 +268,7 @@
                             </div>
                         </div>
 
-                        <div class="newLeistungen-card opacityReveal">
+                        <div class="newLeistungen-card">
                             <img src="src/anatomie.JPG">
                             <div class="newLeistungen-cardText">
                                 <div class="newLeistungen-cardTextHeadline">
@@ -281,7 +281,7 @@
                                 <p>im Bereich Schmerzpsychologie und Wahrnehmung</p>
                             </div>
                         </div>
-                        <div class="newLeistungen-card opacityReveal">
+                        <div class="newLeistungen-card">
                             <img src="src/frederikEditLowQ.jpg">
                             <div class="newLeistungen-cardText">
                                 <div class="newLeistungen-cardTextHeadline">
