--- a/index.html
+++ b/index.html
@@ -44,8 +44,6 @@
 <body>
 
     <div class="loader-wrapper">
-
-
         <div class="loadImageWrapper">
             <div class="blueDots">
                 <div class="blueDot1"></div>
@@ -60,7 +58,7 @@
                 <div class="blueDot10"></div>
             </div>
 
-            <img class="loadImage" src="src/logo.png" height="200px">
+            <img class="loadImage" src="src/loading-logo.png" height="200px">
         </div>
         <div class="line-wobble"></div>
 
@@ -130,14 +128,7 @@
                         </div>
 
                     </div>
-
-
-
                 </div>
-
-
-
-
 
                 <div id="header-left">
                     <div class="imgBox">
@@ -150,7 +141,7 @@
                     <div class="header-leftBG2"></div>
                 </div>
                 <div id="header-right" class="sectionWrapper">
-                    <div id="header_headlineWrapper">
+                    <div id="header_headlineWrapper" class="fromBottomWrapper">
                         <div class="titleSubtitle">
                             <div class="subTitle">
                                 <p>Physiotherapeut</p>
@@ -238,8 +229,8 @@
                     </div>
                 </div>
                 <div class="newLeistungenRight">
-                    <div class="leistungenRightGrid fromBottomWrapper">
-                        <div class="newLeistungen-card">
+                    <div class="leistungenRightGrid">
+                        <div class="newLeistungen-card opacityReveal">
                             <img src="src/behandlung.jpg">
                             <div class="newLeistungen-cardText">
                                 <div class="newLeistungen-cardTextHeadline">
@@ -252,7 +243,7 @@
                                 <p>Kombination aus Physiotherapie, manueller Therapie, Lymphdrainage und neurologischen Konzepten (bereits ab dem Baby-/Kleinkindalter)</p>
                             </div>
                         </div>
-                        <div class=" newLeistungen-card">
+                        <div class="newLeistungen-card opacityReveal">
                             <img src="src/training2.jpg">
                             <div class="newLeistungen-cardText">
                                 <div class="newLeistungen-cardTextHeadline">
@@ -268,7 +259,7 @@
                             </div>
                         </div>
 
-                        <div class="newLeistungen-card">
+                        <div class="newLeistungen-card opacityReveal">
                             <img src="src/anatomie.JPG">
                             <div class="newLeistungen-cardText">
                                 <div class="newLeistungen-cardTextHeadline">
@@ -281,7 +272,7 @@
                                 <p>im Bereich Schmerzpsychologie und Wahrnehmung</p>
                             </div>
                         </div>
-                        <div class="newLeistungen-card">
+                        <div class="newLeistungen-card opacityReveal">
                             <img src="src/frederikEditLowQ.jpg">
                             <div class="newLeistungen-cardText">
                                 <div class="newLeistungen-cardTextHeadline">
@@ -506,14 +497,14 @@
     <script>
         function changeDots() {
             for (let i = 0; i < document.querySelector(".blueDots").children.length; i++) {
-                document.querySelector(".blueDots").children[i].style.backgroundColor = "black";
+                document.querySelector(".blueDots").children[i].style.backgroundColor = "transparent";
             }
 
             for (let i = 0; i < document.querySelector(".blueDots").children.length; i++) {
                 document.querySelector(".blueDots").children[i].style.transition = ".2s";
 
                 setTimeout(() => {
-                    document.querySelector(".blueDots").children[i].style.backgroundColor = "red";
+                    document.querySelector(".blueDots").children[i].style.backgroundColor = "var(--ultraDarkColour)";
                 }, i * 200); // Delay increases for each dot
             }
             setTimeout(changeDots, document.querySelector(".blueDots").children.length * 200);
